# MAGma

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  environment.yml
.github/workflows/: docker-publish.yml  release.yml
src/: assess.rs  gfaparser.rs  index.rs  main.rs  merge.rs  parser.rs  readfetch.rs  reassemble.rs  utility.rs
test/: quality_report.tsv
test/bins/: sample_ERR3405607_metabat2_results.63.fasta
test/reads/: ERR3404870_1.fastq  ERR3404870_2.fastq
