[package]
name="mergebins"
version="1.0.0"
authors=["Yazhini <yazhini@mpinat.mpg.de>", "Johannes Soeding <soeding@mpinat.mpg.de>"]
edition = "2021"

[dependencies]
nalgebra = "0.33"
csv = "1.3"
serde = "1.0"
clap = { version = "4.5", features = ["derive"] }
bio = "2.0"
petgraph = "0.6"
serde_derive = "1.0"
glob = "0.3"
flate2 = "1.0"
rayon = "1.10"