[package]
name="magmax"
version="1.0.0"
authors=["Yazhini A <yazhini@mpinat.mpg.de>", "Johannes Soeding <soeding@mpinat.mpg.de>"]
edition = "2021"
description = "MAGmax: A tool to MAXimize the yield of Metagenome-Assembled Genomes (MAGs) through merging and resssembly."

[dependencies]
nalgebra = "0.33"
csv = "1.3"
serde = "1.0"
clap = { version = "4.5", features = ["derive"] }
bio = "2.0"
petgraph = "0.6"
serde_derive = "1.0"
glob = "0.3"
flate2 = "1.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.10"
hashbrown = "0.15"
memmap2 = "0.9"
seq_io = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

